Spring MVC: test cases for understanding

--- a/src/main/webapp/resources/log4j.properties
+++ b/src/main/webapp/resources/log4j.properties
@@ -1,10 +1,9 @@
-#@todo: file wird nicht gefunden -> kein logging
+log4j.rootLogger=WARN, console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.conversionPattern=%-7p %d [%t] %c %x - %m%n
 
-log.4j.rootLogger=TRACE, Appender1
-log.4j.appender.Appender1=org.apache.log4j.ConsoleAppender
-log.4j.appender.Appender1.layout=org.apache.log4j.PatternLayout
-log.4j.appender.Appender1.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
-
+#options for setting output
 #TRACE
 #DEBUG
 #INFO
